// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PieChart snapShot testing renders PieChart correctly 1`] = `
<div
  className=
      ms-PieChart
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        width: 670px;
      }
>
  <div
    className=
        ms-FocusZone
        &:focus {
          outline: none;
        }
    data-focuszone-id="FocusZone0"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
  >
    <svg
      height={350}
      width={600}
    >
      <g
        transform="translate(300, 175)"
      >
        <g
          aria-label="A-50"
          className=

              {
                outline: none;
              }
          data-is-focusable={true}
          id="id__2"
          onBlur={[Function]}
          onFocus={[Function]}
          role="img"
        >
          <path
            className=

                {
                  fill: #e81123;
                  stroke-width: 0px;
                  stroke: #ffffff;
                }
            d="M0.795,-158.998A159,159,0,0,1,1.59,158.992L0.798,0.603A1,1,0,0,0,0.795,-0.607Z"
          />
          <text
            aria-label="A-50"
            className=

                {
                  fill: #000000;
                  outline: none;
                }
            data-is-focusable={false}
            dominantBaseline="auto"
            id="tooltip-host3"
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            textAnchor="start"
            x={160.99949687526205}
            y={-0.40249958072932485}
          >
            A-50
          </text>
        </g>
        <g
          aria-label="B-25"
          className=

              {
                outline: none;
              }
          data-is-focusable={true}
          id="id__5"
          onBlur={[Function]}
          onFocus={[Function]}
          role="img"
        >
          <path
            className=

                {
                  fill: #0078d4;
                  stroke-width: 0px;
                  stroke: #ffffff;
                }
            d="M0,159A159,159,0,0,1,-158.996,1.193L-0.704,0.71Z"
          />
          <text
            aria-label="B-25"
            className=

                {
                  fill: #000000;
                  outline: none;
                }
            data-is-focusable={false}
            dominantBaseline="hanging"
            id="tooltip-host6"
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            textAnchor="end"
            x={-113.41647658644041}
            y={114.27030602355721}
          >
            B-25
          </text>
        </g>
        <g
          aria-label="C-25"
          className=

              {
                outline: none;
              }
          data-is-focusable={true}
          id="id__8"
          onBlur={[Function]}
          onFocus={[Function]}
          role="img"
        >
          <path
            className=

                {
                  fill: #107c10;
                  stroke-width: 0px;
                  stroke: #ffffff;
                }
            d="M-159,-0.398A159,159,0,0,1,-0.795,-158.998L-0.708,-0.706Z"
          />
          <text
            aria-label="C-25"
            className=

                {
                  fill: #000000;
                  outline: none;
                }
            data-is-focusable={false}
            dominantBaseline="auto"
            id="tooltip-host9"
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            textAnchor="end"
            x={-113.98640803292615}
            y={-113.70179762761569}
          >
            C-25
          </text>
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`PieChart snapShot testing renders with colors, width and height data correctly 1`] = `
<div
  className=
      ms-PieChart
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        width: 670px;
      }
>
  <div
    className=
        ms-FocusZone
        &:focus {
          outline: none;
        }
    data-focuszone-id="FocusZone10"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
  >
    <svg
      height={300}
      width={600}
    >
      <g
        transform="translate(300, 150)"
      >
        <g
          aria-label="A-50"
          className=

              {
                outline: none;
              }
          data-is-focusable={true}
          id="id__12"
          onBlur={[Function]}
          onFocus={[Function]}
          role="img"
        >
          <path
            className=

                {
                  fill: #e81123;
                  stroke-width: 0px;
                  stroke: #ffffff;
                }
            d="M0.67,-133.998A134,134,0,0,1,1.34,133.993L0.674,0.739A1,1,0,0,0,0.67,-0.742Z"
          />
          <text
            aria-label="A-50"
            className=

                {
                  fill: #000000;
                  outline: none;
                }
            data-is-focusable={false}
            dominantBaseline="auto"
            id="tooltip-host13"
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            textAnchor="start"
            x={135.99957500022134}
            y={-0.3399996458334669}
          >
            A-50
          </text>
        </g>
        <g
          aria-label="B-25"
          className=

              {
                outline: none;
              }
          data-is-focusable={true}
          id="id__15"
          onBlur={[Function]}
          onFocus={[Function]}
          role="img"
        >
          <path
            className=

                {
                  fill: #0078d4;
                  stroke-width: 0px;
                  stroke: #ffffff;
                }
            d="M0,134A134,134,0,0,1,-133.996,1.005L-0.741,0.672A1,1,0,0,0,-0.666,0.746Z"
          />
          <text
            aria-label="B-25"
            className=

                {
                  fill: #000000;
                  outline: none;
                }
            data-is-focusable={false}
            dominantBaseline="hanging"
            id="tooltip-host16"
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            textAnchor="end"
            x={-95.80522245811116}
            y={96.52646968449552}
          >
            B-25
          </text>
        </g>
        <g
          aria-label="C-25"
          className=

              {
                outline: none;
              }
          data-is-focusable={true}
          id="id__18"
          onBlur={[Function]}
          onFocus={[Function]}
          role="img"
        >
          <path
            className=

                {
                  fill: #107c10;
                  stroke-width: 0px;
                  stroke: #ffffff;
                }
            d="M-134,-0.335A134,134,0,0,1,-0.67,-133.998L-0.67,-0.742A1,1,0,0,0,-0.744,-0.668Z"
          />
          <text
            aria-label="C-25"
            className=

                {
                  fill: #000000;
                  outline: none;
                }
            data-is-focusable={false}
            dominantBaseline="auto"
            id="tooltip-host19"
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            textAnchor="end"
            x={-96.28665523278234}
            y={-96.04623898978716}
          >
            C-25
          </text>
        </g>
      </g>
    </svg>
  </div>
</div>
`;
